--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       Модальное окно для полноразмерного изображения
       Для того чтобы открыть, необходимо добавить на div.lightbox CSS-класс is-open
     -->
-    <div class="lightbox is-open js-lightbox">
+    <div class="lightbox js-lightbox">
         <div class="lightbox__overlay"></div>
 
         <div class="lightbox__content">
@@ -27,7 +27,7 @@
         <button type="button" class="lightbox__button" data-action="close-lightbox"></button>
     </div>
 
-    <script src="./js/gallery.js" type="module"></script>
+    <script src="./js/gallery-2.js" type="module"></script>
     <!-- <script src="app.js" type="module"></script> -->
 </body>
 
