--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button type="button" class="lightbox__button" data-action="close-lightbox"></button>
     </div>
 
-    <script src="./js/gallery-2.js" type="module"></script>
+    <script src="./js/gallery.js" type="module"></script>
     <!-- <script src="app.js" type="module"></script> -->
 </body>
 
